# tree-sitter-tw

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  bump.config.ts  go.mod  grammar.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  tree-sitter-tw.wasm  tree-sitter.json
bindings/c/: tree-sitter-tw.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tw/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTw/: tw.h
bindings/swift/TreeSitterTwTests/: TreeSitterTwTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
