[package]
name = "tree-sitter-tw"
description = "Tw grammar for tree-sitter"
version = "0.0.1"
authors = ["LoTwT <l709937065@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tw"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lotwt/tree-sitter-tw"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
